--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -5,4 +5,24 @@ en:
       title: "This is home page"
   messages:
     count_message: "Has %{count} errors!"
-
+  time:
+    formats:
+      own: "%H:%M:%S, %d %B"
+      default: "%d-%m-%Y"
+      long: "%d %B, %Y"
+      short: "%d %b"
+  currency:
+    format:
+      delimiter: "."
+      format: "%u %n"
+      precision: 0
+      separator: ","
+      significant: false
+      strip_insignificant_zeros: false
+      unit: "$"
+  count:
+    one: "%{count} day"
+    other: "%{count} days"
+  review:
+    one: "%{count} review"
+    other: "%{count} reviews"
